--- a/index.html
+++ b/index.html
@@ -25,13 +25,6 @@
                 <a href="#home" class="hover:text-blue-400 transition-all liquid-fade-in liquid-text-shadow text-white">Home</a>
                 <a href="pwin11tweaker.html" class="hover:text-blue-400 transition-all liquid-fade-in liquid-text-shadow text-white">About PWin11 Tweaker</a>
                 <a href="#contact" class="hover:text-blue-400 transition-all liquid-fade-in liquid-text-shadow text-white">Contact</a>
-            <h1 class="text-2xl font-bold">PWin11</h1>
-            <div class="burger-menu">☰</div>
-            <div class="nav-links">
-                <a href="#home" class="liquid-text-shadow">Home</a>
-                <a href="pwin11tweaker.html" class="liquid-text-shadow">About PWin11 Tweaker</a>
-                <a href="#contact" class="liquid-text-shadow">Contact</a>
-            </div>
         </div>
     </nav>
 
@@ -90,7 +83,7 @@
                 <div class="liquid-card liquid-highlight p-8 liquid-fade-in-delay-1">
                     <div class="flex items-center mb-4">
                         <div class="w-12 h-12 rounded-full liquid-glass-circle flex items-center justify-center mr-4 mystical-pulse">
-                            <span class="text-xl text-white">⚡</span>
+                            <span class="text-xl text-white">⋉</span>
                         </div>
                         <h3 class="text-2xl font-semibold text-white">System Optimization</h3>
                     </div>
