--- a/pwin11tweaker.html
+++ b/pwin11tweaker.html
@@ -20,19 +20,12 @@
     <!-- Navigation -->
     <nav class="liquid-nav fixed top-0 w-full z-50">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-4 flex justify-between items-center">
-            <h1 class="text-2xl font-bold text-white ghostly-float">PWin11</h1>
+            <h1 class="text-2xl font-bold text-white">PWin11</h1>
             <div class="burger-menu">☰</div>
             <div class="nav-links">
                 <a href="index.html#home" class="hover:text-blue-400 transition-all liquid-fade-in liquid-text-shadow text-white">Home</a>
                 <a href="pwin11tweaker_download.html" class="hover:text-blue-400 transition-all liquid-fade-in liquid-text-shadow text-white">Installation</a>
                 <a href="index.html#contact" class="hover:text-blue-400 transition-all liquid-fade-in liquid-text-shadow text-white">Contact</a>
-            <h1 class="text-2xl font-bold">PWin11</h1>
-            <div class="burger-menu">☰</div>
-            <div class="nav-links">
-                <a href="index.html#home" class="liquid-text-shadow">Home</a>
-                <a href="pwin11tweaker_download.html" class="liquid-text-shadow">Installation</a>
-                <a href="index.html#contact" class="liquid-text-shadow">Contact</a>
-            </div>
         </div>
     </nav>
 
